fixed wrong font on biscuit

--- a/biscuit.theme.css
+++ b/biscuit.theme.css
@@ -19,7 +19,7 @@
   --textdark: 182,168,165;
   --textdarker: 151,135,135;
   --textdarkest: 109,95,95;
-  --font: IBM Sans Plex;
+  --font: IBM Plex Sans;
   --backgroundaccent: 109,95,95;
   --backgroundprimary: 66,57,57;
   --backgroundsecondary: 43,38,38;
